--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ jobs:
           name: "Publish Release on GitHub"
           command: |
             VERSION=${CIRCLE_TAG}
-            BODY=$(cat ~/inspectit/changelog/release_body.md)
+            BODY=test
             ghr -t ${GITHUB_TOKEN} -u inspectIT -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -n "Version ${CIRCLE_TAG}" -b "${BODY}" ${VERSION} ~/inspectit/artifacts/
 
   # Publish docker images
@@ -216,24 +216,9 @@ workflows:
             <<: *filter_release
           requires:
             - requesting-release-build
-      - deploy-release-documentation:
-          filters:
-            <<: *filter_release
-          requires:
-            - checkout
       - build_release_artifacts:
           filters:
             <<: *filter_release
-          requires:
-            - checkout
-      - generate_changelog:
-          filters:
-            <<: *filter_release
-          requires:
-            - checkout
-      - publish_dashboards_to_marketplace:
-          filters:
-            <<: *filter_release      
           requires:
             - checkout
       - publish_github_release:
@@ -241,9 +226,3 @@ workflows:
             <<: *filter_release
           requires:
             - build_release_artifacts
-            - generate_changelog
-      - publish_docker_images:
-          filters:
-            <<: *filter_release
-          requires:
-            - publish_github_release
