--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
     working_directory: ~/inspectit
     steps:
       - attach_repo
-      - run: cd repo && ./gradlew assemble bootJarWithFrontend packageDemo :inspectit-ocelot-agent:cyclonedxBom :inspectit-ocelot-eum-server:bootJar -PbuildVersion=${CIRCLE_TAG}
+      - run: cd repo && ./gradlew assemble bootJarWithFrontend packageDemo :inspectit-ocelot-core:cyclonedxBom :inspectit-ocelot-eum-server:bootJar -PbuildVersion=${CIRCLE_TAG}
       - run: mkdir artifacts
       - run: cp ~/inspectit/repo/inspectit-ocelot-agent/build/inspectit-ocelot-agent-${CIRCLE_TAG}.jar ~/inspectit/artifacts
       - run: cp ~/inspectit/repo/inspectit-ocelot-demo/build/inspectit-ocelot-demo-${CIRCLE_TAG}.zip ~/inspectit/artifacts
