--- a/inspectit-ocelot-documentation/.gitignore
+++ b/inspectit-ocelot-documentation/.gitignore
@@ -6,6 +6,12 @@ lib/core/metadata.js
 lib/core/MetadataBlog.js
 
 website/translated_docs
+
 website/build/
+
 website/node_modules
+
 website/i18n/*
+
+website/.docusaurus
+website/.cache-loader
