--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,7 @@ jobs:
       - run: zip -r inspectit-ocelot-boms.zip boms
       - run: cp inspectit-ocelot-boms.zip ~/inspectit/artifacts
       - run: unzip -l ~/inspectit/artifacts/inspectit-ocelot-boms.zip
+      - run: 
           name: Calculate checksums of release artifacts
           working_directory: ~/inspectit/artifacts
           command: for f in *; do sha256sum "$f" >> inspectit-ocelot-sha256-checksums.txt; done
