--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,12 +123,12 @@ jobs:
       - run: cd repo && ./gradlew dockerTag -PbuildVersion=${CIRCLE_TAG}
       - run: |
           docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-          docker push inspectit/inspectit-ocelot-agent:${CIRCLE_TAG}
-          docker push inspectit/inspectit-ocelot-agent:latest
-          docker push inspectit/inspectit-ocelot-configurationserver:${CIRCLE_TAG}
-          docker push inspectit/inspectit-ocelot-configurationserver:latest
-          docker push inspectit/inspectit-ocelot-eum-server:${CIRCLE_TAG}
-          docker push inspectit/inspectit-ocelot-eum-server:latest
+          docker push $DOCKER_HUB_USER/inspectit-ocelot-agent:${CIRCLE_TAG}
+          docker push $DOCKER_HUB_USER/inspectit-ocelot-agent:latest
+          docker push $DOCKER_HUB_USER/inspectit-ocelot-configurationserver:${CIRCLE_TAG}
+          docker push $DOCKER_HUB_USER/inspectit-ocelot-configurationserver:latest
+          docker push $DOCKER_HUB_USER/inspectit-ocelot-eum-server:${CIRCLE_TAG}
+          docker push $DOCKER_HUB_USER/inspectit-ocelot-eum-server:latest
 
   # Deploy pre-release documentation
   deploy-master-documentation:
@@ -220,27 +220,6 @@ workflows:
             <<: *filter_release
           requires:
             - requesting-release-build
-      - deploy-release-documentation:
-          filters:
-            <<: *filter_release
-          requires:
-            - checkout
-      - build_release_artifacts:
-          filters:
-            <<: *filter_release
-          requires:
-            - checkout
-      - generate_changelog:
-          filters:
-            <<: *filter_release
-          requires:
-            - checkout
-      - publish_github_release:
-          filters:
-            <<: *filter_release
-          requires:
-            - build_release_artifacts
-            - generate_changelog
       - publish_docker_images:
           filters:
             <<: *filter_release
