modify for testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,3 +223,5 @@ workflows:
       - publish_docker_images:
           filters:
             <<: *filter_release
+          requires:
+            - checkout
