--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,10 @@ allprojects {
 
     repositories {
         mavenCentral()
-        maven {
+        /*maven {
             name 'Nexus@NT'
             url "https://repository.novatec-gmbh.de/content/repositories/3rd_party_libs/"
-        }
+        }*/
     }
 
     apply plugin: 'java'
