--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Create Software-Bills-Of-Materials
+      - name: Build artifacts
         run: |
-          ./gradlew assemble bootJarWithFrontend :inspectit-ocelot-core:cyclonedxBom :inspectit-ocelot-configurationserver:cyclonedxBom -PbuildVersion=${CIRCLE_TAG}
+          ./gradlew assemble bootJarWithFrontend :inspectit-ocelot-core:cyclonedxBom :inspectit-ocelot-configurationserver:cyclonedxBom -PbuildVersion=${{ github.ref_name}}
           mkdir artifacts
-          cp ./inspectit-ocelot-agent/build/inspectit-ocelot-agent-${CIRCLE_TAG}.jar ./artifacts
-          cp ./components/inspectit-ocelot-configurationserver/build/libs/inspectit-ocelot-configurationserver-${CIRCLE_TAG}.jar ./artifacts
+          cp ./inspectit-ocelot-agent/build/inspectit-ocelot-agent-${{ github.ref_name}}.jar ./artifacts
+          cp ./components/inspectit-ocelot-configurationserver/build/libs/inspectit-ocelot-configurationserver-${{ github.ref_name}}.jar ./artifacts
           mkdir boms
           cp ./inspectit-ocelot-core/build/reports/bom.json ./boms/inspectit-ocelot-agent-bom.json
           cp ./inspectit-ocelot-core/build/reports/bom.xml ./boms/inspectit-ocelot-agent-bom.xml
@@ -53,7 +53,7 @@ jobs:
         with:
           tag_name: ${{ github.event.inputs.boomerang-version }}
           files: .artifacts/*
-          body: ${{steps.github_release.outputs.changelog}}
+          body: ${{ steps.github_release.outputs.changelog }}
 
   #build_and_publish_docker_images:
 
