--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,8 +54,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.event.inputs.boomerang-version }}
-          files: .artifacts/*
           body: ${{ steps.github_release.outputs.changelog }}
+          files: artifacts/*
 
   #build_and_publish_docker_images:
 
