--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,19 +43,15 @@ jobs:
       - name: Calculate checksums of release artifacts
         working-directory: ./artifacts
         run: for f in *; do sha256sum "$f" >> inspectit-ocelot-sha256-checksums.txt; done
-      - name: test Artifacts
-        run: ls -la artifacts
-      - name: "Build Changelog"
-        id: build_changelog
-        uses: mikepenz/release-changelog-builder-action@v3.1.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v0.1.14
         with:
           tag_name: ${{ github.event.inputs.boomerang-version }}
-          body: ${{ steps.github_release.outputs.changelog }}
           files: artifacts/*
+          generate_release_notes: true
+          name: Version ${{ github.ref_name}}
+          body: "You can also find the corresponding documentation online under the following link: [inspectIT Ocelot Documentation](http://docs.inspectit.rocks)"
+
 
   #build_and_publish_docker_images:
 
