--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,21 @@ jobs:
           body: "You can also find the corresponding documentation online under the following link: [inspectIT Ocelot Documentation](http://docs.inspectit.rocks)"
 
 
-  #build_and_publish_docker_images:
-
+  build_and_publish_docker_images:
+    name: 'Build and Release'
+    runs-on: ubuntu-latest
+    needs: build_and_release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name}}
+      - run: |
+          docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
+          docker push inspectit/inspectit-ocelot-agent:${{ github.ref_name}}
+          docker push inspectit/inspectit-ocelot-agent:latest
+          docker push inspectit/inspectit-ocelot-configurationserver:${{ github.ref_name}}
+          docker push inspectit/inspectit-ocelot-configurationserver:latest
+          
   #deploy-release-documentation:
