--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,12 +63,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name}}
-      - run: |
+      - name: Build Docker Images
+        run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name}}
+      - name: Push Docker Images
+        run: |
           docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
           docker push inspectit/inspectit-ocelot-agent:${{ github.ref_name}}
           docker push inspectit/inspectit-ocelot-agent:latest
           docker push inspectit/inspectit-ocelot-configurationserver:${{ github.ref_name}}
           docker push inspectit/inspectit-ocelot-configurationserver:latest
-          
-  #deploy-release-documentation:
+
+  deploy_release_documentation:
