--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,48 +54,49 @@ jobs:
           body: "You can also find the corresponding documentation online under the following link: [inspectIT Ocelot Documentation](http://docs.inspectit.rocks)"
 
 
-  build_and_publish_docker_images:
-    name: 'Build and Release'
-    runs-on: ubuntu-latest
-    needs: build_and_release
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build Docker Images
-        run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name }}
-      - name: Push Docker Images
-        run: |
-          docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
-          docker push inspectit/inspectit-ocelot-agent:${{ github.ref_name }}
-          docker push inspectit/inspectit-ocelot-agent:latest
-          docker push inspectit/inspectit-ocelot-configurationserver:${{ github.ref_name }}
-          docker push inspectit/inspectit-ocelot-configurationserver:latest
-
-  deploy_release_documentation:
-    name: "Deploy Release Documentation"
-    runs-on: ubuntu-latest
-    needs: build_and_release
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16.x
-      - name: Replace Variables in Docs
-        working-directory: ./inspectit-ocelot-documentation/docs
-        run:
-          find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
-          OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
-          find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
-      - name: Create and Publish new Documentation Version
-        working-directory: ./inspectit-ocelot-documentation/website
-        run: |
-          npm install
-          npm run version ${{ github.ref_name }}
-          git add versions.json versioned_docs versioned_sidebars
-          git commit -m "[skip ci] Publish documentation ${{ github.ref_name }}"
-          git push
-          GIT_USER=NTTechnicalUser CUSTOM_COMMIT_MESSAGE="[skip ci] Publish documentation ${{ github.ref_name }}" npm run publish-gh-pages
+  #build_and_publish_docker_images:
+  #  name: 'Build and Release'
+  #  runs-on: ubuntu-latest
+  #  needs: build_and_release
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v3
+  #    - name: Grant execute permission for gradlew
+  #      run: chmod +x gradlew
+  #    - name: Build Docker Images
+  #      run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name }}
+  #    - name: Push Docker Images
+  #      run: |
+  #        docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
+  #        docker push inspectit/inspectit-ocelot-agent:${{ github.ref_name }}
+  #        docker push inspectit/inspectit-ocelot-agent:latest
+  #        docker push inspectit/inspectit-ocelot-configurationserver:${{ github.ref_name }}
+  #        docker push inspectit/inspectit-ocelot-configurationserver:latest
+#
+  #deploy_release_documentation:
+  #  name: "Deploy Release Documentation"
+  #  runs-on: ubuntu-latest
+  #  needs: build_and_release
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v3
+  #    - name: Use Node.js 16.x
+  #      uses: actions/setup-node@v2
+  #      with:
+  #        node-version: 16.x
+  #    - name: Replace Variables in Docs
+  #      working-directory: ./inspectit-ocelot-documentation/docs
+  #      run:
+  #        find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
+  #        OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
+  #        find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
+  #    - name: Create and Publish new Documentation Version
+  #      working-directory: ./inspectit-ocelot-documentation/website
+  #      run: |
+  #        npm install
+  #        npm run version ${{ github.ref_name }}
+  #        git add versions.json versioned_docs versioned_sidebars
+  #        git commit -m "[skip ci] Publish documentation ${{ github.ref_name }}"
+  #        git push
+  #        GIT_USER=NTTechnicalUser CUSTOM_COMMIT_MESSAGE="[skip ci] Publish documentation ${{ github.ref_name }}" npm run publish-gh-pages
+#
