--- a/.github/workflows/deploy_master_docs.yml
+++ b/.github/workflows/deploy_master_docs.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 18
           cache: yarn
+          working-directory: ./inspectit-ocelot-documentation/website
 
       - name: Install dependencies
         working-directory: ./inspectit-ocelot-documentation/website
