--- a/.github/workflows/docs_deployment_test.yml
+++ b/.github/workflows/docs_deployment_test.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 18
           cache: yarn
+          working-directory: ./inspectit-ocelot-documentation/website
       - name: Install dependencies
         working-directory: ./inspectit-ocelot-documentation/website
         run: yarn install --frozen-lockfile
