--- a/.github/workflows/deploy_master_docs.yml
+++ b/.github/workflows/deploy_master_docs.yml
@@ -10,6 +10,9 @@ jobs:
   deploy-master-documentation:
     name: 'Deploy Pre-Release Documentation'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: inspectit-ocelot-documentation/website
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -18,13 +21,11 @@ jobs:
         with:
           node-version: 18
           cache: yarn
-          working-directory: ./inspectit-ocelot-documentation/website
+          cache-dependency-path: 'inspectit-ocelot-documentation/website/yarn.lock'
 
       - name: Install dependencies
-        working-directory: ./inspectit-ocelot-documentation/website
         run: yarn install --frozen-lockfile
       - name: Build website
-        working-directory: ./inspectit-ocelot-documentation/website
         run: yarn build
 
       - name: Deploy to GitHub Pages
