--- a/.github/workflows/deploy_master_docs.yml
+++ b/.github/workflows/deploy_master_docs.yml
@@ -33,14 +33,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Build output to publish to the `gh-pages` branch:
-          publish_dir: ./inspectit-ocelot-documentation/website/build
-          # The following lines assign commit authorship to the official
-          # GH-Actions bot for deploys to `gh-pages` branch:
-          # https://github.com/actions/checkout/issues/13#issuecomment-724415212
-          # The GH actions bot is used by default if you didn't specify the two fields.
-          # You can swap them out with your own user credentials.
-          user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.com
+          publish_dir: ./inspectit-ocelot-documentation/website/build/inspectit-ocelot
+          user_name: NTTechnicalUser
      # - name: Deploying to GitHub Pages
      #   working-directory: ./inspectit-ocelot-documentation/website
      #   run: |
