Add NTTechnicalUser Email

--- a/.github/workflows/deploy_master_docs.yml
+++ b/.github/workflows/deploy_master_docs.yml
@@ -35,6 +35,7 @@ jobs:
           # Build output to publish to the `gh-pages` branch:
           publish_dir: ./inspectit-ocelot-documentation/website/build/inspectit-ocelot
           user_name: NTTechnicalUser
+          user_email: NTTechnicalUser@users.noreply.github.com
      # - name: Deploying to GitHub Pages
      #   working-directory: ./inspectit-ocelot-documentation/website
      #   run: |
