--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,30 +73,33 @@ jobs:
   #        docker push inspectit/inspectit-ocelot-configurationserver:${{ github.ref_name }}
   #        docker push inspectit/inspectit-ocelot-configurationserver:latest
 #
-  #deploy_release_documentation:
-  #  name: "Deploy Release Documentation"
-  #  runs-on: ubuntu-latest
-  #  needs: build_and_release
-  #  steps:
-  #    - name: Checkout
-  #      uses: actions/checkout@v3
-  #    - name: Use Node.js 16.x
-  #      uses: actions/setup-node@v2
-  #      with:
-  #        node-version: 16.x
-  #    - name: Replace Variables in Docs
-  #      working-directory: ./inspectit-ocelot-documentation/docs
-  #      run:
-  #        find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
-  #        OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
-  #        find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
-  #    - name: Create and Publish new Documentation Version
-  #      working-directory: ./inspectit-ocelot-documentation/website
-  #      run: |
-  #        npm install
-  #        npm run version ${{ github.ref_name }}
-  #        git add versions.json versioned_docs versioned_sidebars
-  #        git commit -m "[skip ci] Publish documentation ${{ github.ref_name }}"
-  #        git push
-  #        GIT_USER=NTTechnicalUser CUSTOM_COMMIT_MESSAGE="[skip ci] Publish documentation ${{ github.ref_name }}" npm run publish-gh-pages
-#
+  build_documentation:
+    name: "Build Release Documentation"
+    runs-on: ubuntu-latest
+    needs: build_and_release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+      - name: Replace Variables in Docs
+        working-directory: ./inspectit-ocelot-documentation/docs
+        run:
+          find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
+          OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
+          find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
+      - name: Create and Publish new Documentation Version
+        working-directory: ./inspectit-ocelot-documentation/website
+        run: |
+          npm install
+          npm run version ${{ github.ref_name }}
+          git add versions.json versioned_docs versioned_sidebars
+          git config --global user.name 'NTTechnicalUser'
+          git config --global user.email 'NTTechnicalUser@users.noreply.github.com'
+          git commit -m "Publish documentation ${{ github.ref_name }}"
+          git push
+
+  publish_release_documentation:
+    uses: ./.github/workflows/agent_test.yml
