--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,4 +102,5 @@ jobs:
           git push
 
   publish_release_documentation:
-    uses: ./.github/workflows/agent_test.yml
+    needs: build_documentation
+    uses: ./.github/workflows/deploy_docs.yml
