Fix deploy docs paths

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - inspectit-ocelot-documentation
+      - inspectit-ocelot-documentation/**
   workflow_call:
 
 jobs:
