--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,7 +99,7 @@ jobs:
           git config --global user.name 'NTTechnicalUser'
           git config --global user.email 'NTTechnicalUser@users.noreply.github.com'
           git commit -m "Publish documentation ${{ github.ref_name }}"
-          git push
+          git push origin HEAD:master
 
   publish_release_documentation:
     needs: build_documentation
