--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,5 +102,8 @@ jobs:
           git push origin HEAD:master
 
   publish_release_documentation:
+    name: "Publish Release Documentation"
     needs: build_documentation
     uses: ./.github/workflows/deploy_docs.yml
+    with:
+      commit-message: Publish documentation for ${{ github.ref_name }}
