--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,56 +54,57 @@ jobs:
   #        body: "You can also find the corresponding documentation online under the following link: [inspectIT Ocelot Documentation](http://docs.inspectit.rocks)"
 
 
-  #build_and_publish_docker_images:
-  #  name: 'Build and Release'
+  build_and_publish_docker_images:
+    name: 'Build and Release'
+    runs-on: ubuntu-latest
+    #needs: build_and_release
+    environment: release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build Docker Images
+        run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name }}
+      - name: Push Docker Images
+        run: |
+          docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
+          docker push aaronweikru/inspectit-ocelot-agent:${{ github.ref_name }}
+          docker push aaronweikru/inspectit-ocelot-agent:latest
+          docker push aaronweikru/inspectit-ocelot-configurationserver:${{ github.ref_name }}
+          docker push aaronweikru/inspectit-ocelot-configurationserver:latest
+
+  #build_documentation:
+  #  name: "Build Release Documentation"
   #  runs-on: ubuntu-latest
   #  needs: build_and_release
   #  steps:
   #    - name: Checkout
   #      uses: actions/checkout@v3
-  #    - name: Grant execute permission for gradlew
-  #      run: chmod +x gradlew
-  #    - name: Build Docker Images
-  #      run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name }}
-  #    - name: Push Docker Images
+  #    - name: Setup Node.js
+  #      uses: actions/setup-node@v2
+  #      with:
+  #        node-version: 18
+  #    - name: Replace Variables in Docs
+  #      working-directory: ./inspectit-ocelot-documentation/docs
   #      run: |
-  #        docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
-  #        docker push inspectit/inspectit-ocelot-agent:${{ github.ref_name }}
-  #        docker push inspectit/inspectit-ocelot-agent:latest
-  #        docker push inspectit/inspectit-ocelot-configurationserver:${{ github.ref_name }}
-  #        docker push inspectit/inspectit-ocelot-configurationserver:latest
+  #        find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
+  #        OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
+  #        find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
+  #    - name: Create and Publish new Documentation Version
+  #      working-directory: ./inspectit-ocelot-documentation/website
+  #      run: |
+  #        npm install
+  #        npm run version ${{ github.ref_name }}
+  #        git add versions.json versioned_docs versioned_sidebars
+  #        git config --global user.name 'NTTechnicalUser'
+  #        git config --global user.email 'NTTechnicalUser@users.noreply.github.com'
+  #        git commit -m "Publish documentation ${{ github.ref_name }}"
+  #        git push origin HEAD:master
 #
-  build_documentation:
-    name: "Build Release Documentation"
-    runs-on: ubuntu-latest
-    #needs: build_and_release
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 18
-      - name: Replace Variables in Docs
-        working-directory: ./inspectit-ocelot-documentation/docs
-        run: |
-          find . -type f -print0 | xargs -0 sed -i 's/{inspectit-ocelot-version}/'"${{ github.ref_name }}"'/g'
-          OPEN_CENSUS_VERSION=$(cat ../../gradle.properties | grep -oP '(?<=openCensusVersion=).*')
-          find . -type f -print0 | xargs -0 sed -i 's/{opencensus-version}/'"${OPEN_CENSUS_VERSION}"'/g'
-      - name: Create and Publish new Documentation Version
-        working-directory: ./inspectit-ocelot-documentation/website
-        run: |
-          npm install
-          npm run version ${{ github.ref_name }}
-          git add versions.json versioned_docs versioned_sidebars
-          git config --global user.name 'NTTechnicalUser'
-          git config --global user.email 'NTTechnicalUser@users.noreply.github.com'
-          git commit -m "Publish documentation ${{ github.ref_name }}"
-          git push origin HEAD:master
-
-  publish_release_documentation:
-    name: "Publish Release Documentation"
-    needs: build_documentation
-    uses: ./.github/workflows/deploy_docs.yml
-    with:
-      commit-message: Publish documentation for ${{ github.ref_name }}
+  #publish_release_documentation:
+  #  name: "Publish Release Documentation"
+  #  needs: build_documentation
+  #  uses: ./.github/workflows/deploy_docs.yml
+  #  with:
+  #    commit-message: Publish documentation for ${{ github.ref_name }}
