--- a/components/inspectit-ocelot-configurationserver/build.gradle
+++ b/components/inspectit-ocelot-configurationserver/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id("com.github.node-gradle.node") version "2.2.1"
     id "com.moowork.node" version "1.3.1"
-    id 'com.palantir.docker' version "0.21.0"
+    id 'com.palantir.docker' version "0.34.0"
     id 'org.springframework.boot' version "${springboot_version}"
     id "org.cyclonedx.bom" version "1.5.0"
 }
@@ -167,5 +167,6 @@ docker {
     dockerfile file('docker/Dockerfile')
     files 'docker/entrypoint.sh', "$buildDir/docker-jar/inspectit-ocelot-configurationserver.jar"
     buildx true
+    platform 'linux/amd64', 'linux/arm64', 'linux/arm/v7'
 }
 docker.dependsOn copyServerJar
