--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
 
 
   build_and_publish_docker_images:
-    name: 'Build and Release'
+    name: 'Build and Push Docker Images'
     runs-on: ubuntu-latest
     #needs: build_and_release
     environment: release
@@ -64,8 +64,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build Docker Images
+      - name: Activate buildx driver
         run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name }}
+      - name: Build Docker Images
+        run: docker buildx create --use
       - name: Push Docker Images
         run: |
           docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
