--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,17 +64,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Activate buildx driver
-        run: docker buildx create --use
-      - name: Build Docker Images
-        run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name }}
-      - name: Push Docker Images
+      - name: Log into Docker account
         run: |
           docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
-          docker push aaronweikru/inspectit-ocelot-agent:${{ github.ref_name }}
-          docker push aaronweikru/inspectit-ocelot-agent:latest
-          docker push aaronweikru/inspectit-ocelot-configurationserver:${{ github.ref_name }}
-          docker push aaronweikru/inspectit-ocelot-configurationserver:latest
+      - name: Build and Push Docker Images
+        run: ./gradlew dockerPush -PbuildVersion=${{ github.ref_name }}
 
   #build_documentation:
   #  name: "Build Release Documentation"
