--- a/components/inspectit-ocelot-configurationserver/build.gradle
+++ b/components/inspectit-ocelot-configurationserver/build.gradle
@@ -165,9 +165,7 @@ docker {
     dependsOn copyServerJar
 
     name "aaronweikru/inspectit-ocelot-configurationserver"
-    tag 'latest', "hub.docker.com/${name}:latest"
-    tag 'versioned', "my.registry.com/${name}:${version}"
+    tag 'versioned', "hub.docker.com/${name}:${version}"
     dockerfile file('docker/Dockerfile')
     files 'docker/entrypoint.sh', "$buildDir/docker-jar/inspectit-ocelot-configurationserver.jar"
-    platform 'linux/amd64', 'linux/arm64', 'linux/arm/v7'
 }
